Fix issues with column spacing

--- a/layout.css
+++ b/layout.css
@@ -7,29 +7,6 @@
   box-sizing: inherit;
 }
 
-.bg-primary {
-  background: var(--primary);
-  color: white !important;
-}
-
-.bg-accent {
-  background: var(--accent);
-  color: white !important;
-}
-
-.bg-light {
-  background: var(--lightest-gray);
-}
-
-.bg-medium {
-  background: var(--light-gray);
-}
-
-.bg-dark {
-  background: var(--dark-gray);
-  color: white !important;
-}
-
 body {
   width: 100%;
   overflow-x: auto;
@@ -1637,86 +1614,9 @@ html {
  ---------------------------------------------------------------
  ---------------------------------------------------------------*/
 
-html {
+html, body {
   font-family: 'Raleway';
   font-weight: 400;
-}
-
-body {
-  font-size: 1rem;
-  font-family: 'Raleway';
-  color: var(--dark-gray);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 600;
-  margin-top: 0rem;
-  margin-bottom: 2rem;
-  letter-spacing: 0.1rem;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-size: 1rem;
-  line-height: 1rem;
-}
-
-h1 {
-  font-size: 32px;
-  margin-bottom: 32px;
-  line-height: 48px;
-}
-
-h2 {
-  font-size: 28px;
-  margin-bottom: 28px;
-  line-height: 38px;
-}
-
-h3 {
-  font-size: 22px;
-  margin-bottom: 22px;
-  line-height: 33.5px;
-}
-
-h4 {
-  font-size: 18px;
-  margin-bottom: 18px;
-  line-height: 25px;
-}
-
-h5 {
-  font-size: 17px;
-  margin-bottom: 17px;
-  line-height: 22.5px;
-}
-
-h6 {
-  font-size: 15px;
-  margin-bottom: 15px;
-  line-height: 20px;
-}
-
-h1.title,
-h2.title,
-h3.title,
-h4.title,
-h5.title,
-h6.title {
-  margin-bottom: 10px !important;
-}
-
-.subtitle {
-  color: #8f8f8f;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 30px;
 }
 
 p {
@@ -1726,14 +1626,6 @@ p {
 
 small {
   font-size: 14px;
-}
-
-strong {
-  font-weight: 600;
-}
-
-h1 strong, h2 strong, h3 strong, h4 strong, h5 strong {
-  font-weight: 800;
 }
 
 /* Display & Positioning Modifiers
